--- a/src/page-template.hbs
+++ b/src/page-template.hbs
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>{{htmlWebpackPlugin.options.title}}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="{{htmlWebpackPlugin.options.description}}">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
