--- a/src/page-template.hbs
+++ b/src/page-template.hbs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <html lang="en">
         <meta charset="UTF-8">
         <title>{{htmlWebpackPlugin.options.title}}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
