--- a/src/page-template.hbs
+++ b/src/page-template.hbs
@@ -9,7 +9,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
         <style>
             body{
-                background-color: #F9FAF4;
+                font-family: 'Inter', sans-serif;
+                background-color: #fff;
+                {{!-- background-color: #F9FAF4; --}}
             }
         </style>
     </head>
