--- a/src/page-template.hbs
+++ b/src/page-template.hbs
@@ -6,12 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="{{htmlWebpackPlugin.options.description}}">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
         <style>
             body{
                 font-family: 'Inter', sans-serif;
                 background-color: #fff;
-                {{!-- background-color: #F9FAF4; --}}
+                margin: 0;
+                padding: 0;
             }
         </style>
     </head>
