5-9: Update footer links

--- a/src/page-template.hbs
+++ b/src/page-template.hbs
@@ -12,6 +12,8 @@
             body{
                 font-family: 'Inter', sans-serif;
                 background-color: #fff;
+                color: #333333;
+                min-height: 100vh;
                 margin: 0;
                 padding: 0;
             }
