--- a/src/page-template.hbs
+++ b/src/page-template.hbs
@@ -15,6 +15,8 @@
                 color: #333333;
                 margin: 0;
                 padding: 0;
+                width: 100%;
+                height: 100%;
             }
         </style>
     </head>
